Missing transpose in eq (4)

--- a/emfa.tex
+++ b/emfa.tex
@@ -72,7 +72,7 @@ where
 \begin{align}
     \label{eq:estep}
     \Lambda &= \left(\vI + \vC\trp \vR\inv \vC\right)\inv,\nonumber\\
-    \mu_i &= \Lambda \vC \vR\inv \vy_i.
+    \mu_i &= \Lambda \vC\trp \vR\inv \vy_i.
 \end{align}
 Note that the covariance of the latent doesn't depend on the sample.
 Our goal is to find the parameters $\theta = \{\vC, \vR\}$ that maximizes the
