Better author name info???

--- a/emfa.bib
+++ b/emfa.bib
@@ -1,6 +1,6 @@
 @article{Rubin1982,
     abstract = {The details of {EM} algorithms for maximum likelihood factor analysis are presented for both the exploratory and confirmatory models. The algorithm is essentially the same for both cases and involves only simple least squares regression operations; the largest matrix inversion required is for aq ×q symmetric matrix whereq is the matrix of factors. The example that is used demonstrates that the likelihood for the factor analysis model may have multiple modes that are not simply rotations of each other; such behavior should concern users of maximum likelihood factor analysis and certainly should cast doubt on the general utility of second derivatives of the log likelihood as measures of precision of estimation.},
-    author = {Rubin, Donald B. and Thayer, Dorothy T.},
+    author = {Donald B. Rubin and Dorothy T. Thayer},
     booktitle = {Psychometrika},
     citeulike-article-id = {777984},
     citeulike-linkout-0 = {http://dx.doi.org/10.1007/bf02293851},
@@ -70,7 +70,7 @@
     posted-at = {2012-07-28 14:40:57},
     priority = {4},
     publisher = {MIT Press},
-    title = {A Unifying Review of Linear Gaussian Models},
+    title = {A Unifying Review of Linear {G}aussian Models},
     url = {http://dx.doi.org/10.1162/089976699300016674},
     volume = {11},
     year = {1999}
